sonda-core/tests/snapshots/v2_expand_fixtures__valid_expand_pack_with_overrides.snap
---
source: sonda-core/tests/v2_expand_fixtures.rs
expression: expanded
---
{
  "version": 2,
  "entries": [
    {
      "id": "primary_uplink.ifOperStatus",
      "signal_type": "metrics",
      "name": "ifOperStatus",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "flap",
        "up_duration": "60s",
        "down_duration": "30s",
        "up_value": null,
        "down_value": null
      },
      "log_generator": null,
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp",
        "probe": "synthetic"
      },
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": null,
      "after": null,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "primary_uplink.ifHCInOctets",
      "signal_type": "metrics",
      "name": "ifHCInOctets",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "step",
        "start": 0.0,
        "step_size": 125000.0,
        "max": null
      },
      "log_generator": null,
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": null,
      "after": null,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "primary_uplink.ifHCOutOctets",
      "signal_type": "metrics",
      "name": "ifHCOutOctets",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "step",
        "start": 0.0,
        "step_size": 62500.0,
        "max": null
      },
      "log_generator": null,
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": null,
      "after": null,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "primary_uplink.ifInErrors",
      "signal_type": "metrics",
      "name": "ifInErrors",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "constant",
        "value": 0.0
      },
      "log_generator": null,
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": null,
      "after": null,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    },
    {
      "id": "primary_uplink.ifOutErrors",
      "signal_type": "metrics",
      "name": "ifOutErrors",
      "rate": 1.0,
      "duration": "2m",
      "generator": {
        "type": "constant",
        "value": 0.0
      },
      "log_generator": null,
      "labels": {
        "device": "rtr-edge-01",
        "env": "prod",
        "ifAlias": "",
        "ifIndex": "1",
        "ifName": "Gi0/0/0",
        "job": "snmp"
      },
      "dynamic_labels": null,
      "encoder": {
        "type": "prometheus_text",
        "precision": null
      },
      "sink": {
        "type": "stdout"
      },
      "jitter": null,
      "jitter_seed": null,
      "gaps": null,
      "bursts": null,
      "cardinality_spikes": null,
      "phase_offset": null,
      "clock_group": null,
      "after": null,
      "distribution": null,
      "buckets": null,
      "quantiles": null,
      "observations_per_tick": null,
      "mean_shift_per_sec": null,
      "seed": null
    }
  ]
}
